# hidapi-rs

./: .gitmodules  Cargo.toml  build.rs
src/: ffi.rs  lib.rs
