[package]
name = "hidapi"
version = "0.6.0"
authors = [
    "Roland Ruckerbauer <roland.rucky@gmail.com>",
    "Osspial <osspial@gmail.com>",
    "Artyom Pavlov <newpavlov@gmail.com>",
	"mberndt123",
	"niklasad1",
    "X3n0m0rph59 <x3n0m0rph59@gmail.com>"
]
repository = "https://github.com/X3n0m0rph59/hidapi-rs"
description = "Rust-y wrapper around hidapi"
license = "MIT"
keywords = ["hid", "api", "usb","binding", "wrapper"]
build = "build.rs"
links = "hidapi"
documentation = "https://docs.rs/hidapi"

[features]
default = ["linux-static-libusb"]
linux-static-libusb = []
linux-static-hidraw = []
linux-shared-libusb = []
linux-shared-hidraw = []

[dependencies]
libc = "0.2.65"
failure = "0.1.6"
failure_derive = "0.1.6"

[build-dependencies]
cc = "1.0.47"
pkg-config = "0.3.17"

[dev-dependencies]
threadgroup = "0.1.0"